# TarkShaashtra-Hackathon

./: .gitignore  GEMINI.md  README.md
.antigravitycli/: d4adb35b-9417-45dc-b349-e7fb723068da.json
Animesh_temp/: dummy1.html  dummy2.html  dummy3.html  dummy4.html  dummy5.html
Animesh_temp/TarkShaastra/: .gitignore  app.py  models.py  requirements.txt
Krish_temp/: code.html
Krish_temp/Login_portal/: DESIGN.md  code.html
Krish_temp/Registration_portal/: code.html
Rutvi_temp/: README.md
Rutvi_temp/backend/: server.js
Rutvi_temp/frontend/: package.json
Rutvi_temp/frontend/src/: App.jsx
Rutvi_temp/frontend/src/components/: Navbar.jsx  Sidebar.jsx
Rutvi_temp/frontend/src/styles/: index.css
UI_1/LD Hackathon/backend/: server.js
UI_1/LD Hackathon/frontend/: index.html  package-lock.json  package.json
final_project/: .gitignore  mainplus.py  start.bat
final_project/backend/: .env.example  app.py  appwrite_sync.py  models.py  purge_bad_ids.py  pyproject.toml  requirements.txt  resolvo_engine.py  test_appwrite.py
final_project/backend/static/: app.js  style.css
final_project/backend/templates/: base.html  google_authorize.html  index.html  login.html  signup.html  verify_email.html
final_project/frontend/: .env.example  package-lock.json  package.json
final_project/frontend/components/: AppLayout.jsx  Sidebar.jsx
final_project/frontend/context/: AppContext.jsx
final_project/frontend/pages/: SubmitComplaint.jsx
final_project/frontend/src/: App.jsx
final_project/frontend/styles/: index.css
yash_temp/: App.tsx  appwrite.ts  index.css
(+45 files in other folders)
